// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount> Renders 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hhCnXG count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount> Update via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hhCnXG count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
